<resources>
    <!--lib-->
    <string name="network_nonet">网络连接已断开,请检查网络设置!</string>
    <string name="servers_connection_error">服务器连接异常,请稍后再试!</string>
    <string name="network_runtime">网络连接不稳定,请重试!</string>
    <string name="net_others">网络访问错误,请稍后再试</string>
    <string name="json_error">JSON数据格式有误或JSON数据字段所传值有误!</string>
    <string name="loading">请稍后&#8230;</string>
    <string name="lib_cancle">取消</string>
    <string name="lib_sure">确定</string>
    <string name="lib_none">没有更多了&#8230;</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="release_refresh">释放刷新</string>
    <string name="refreshing">刷新中</string>
    <string name="complete">完成</string>


    <string name="title">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>


</resources>
