<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/lib_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:padding="10dp"
            android:text="@string/lib_cancle"
            android:textColor="@color/date_picker_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lib_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/date_picker_text_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lib_tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/lib_sure"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:textColor="@color/date_picker_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/view_color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <info.emm.commonlib.widget.datepicker.PickerView
            android:id="@+id/lib_dpv_year"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <info.emm.commonlib.widget.datepicker.PickerView
            android:id="@+id/lib_dpv_month"
            android:layout_width="0dp"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <info.emm.commonlib.widget.datepicker.PickerView
            android:id="@+id/lib_dpv_day"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <info.emm.commonlib.widget.datepicker.PickerView
            android:id="@+id/lib_dpv_hour"
            android:layout_width="0dp"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/lib_tv_hour_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <info.emm.commonlib.widget.datepicker.PickerView
            android:id="@+id/lib_dpv_minute"
            android:layout_width="0dp"
            android:focusable="auto"
            android:background="@drawable/lib_selector_transparent_2_focus_rectangle_outline_r5"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/lib_tv_minute_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

    </LinearLayout>

</LinearLayout>